--- a/src/app/student/student-list/student-list.component.html
+++ b/src/app/student/student-list/student-list.component.html
@@ -5,6 +5,7 @@
         <th scope="col">ID</th>
         <th scope="col">Name</th>
         <th scope="col">Age</th>
+        <th scope="col">Operations</th>
       </tr>
     </thead>
     <tbody>
@@ -12,7 +13,13 @@
         <td scope="row">{{item.id}}</td>
         <td>{{item.name}}</td>
         <td>{{item.age}}</td>
+        <td>
+          <button (click)="showDetails(item.id)">Details</button>
+        </td>
       </tr>
     </tbody>
   </table>
+  <!--  -->
+  <!-- Binding Some Data From Parent to an INPUT inside Child Component to show it -->
+  <app-signle-student-details [singleStudent]="outPutStudentDetails"></app-signle-student-details>
 </div>
