--- a/src/app/student/signle-student-details/signle-student-details.component.html
+++ b/src/app/student/signle-student-details/signle-student-details.component.html
@@ -2,5 +2,6 @@
   <h2>{{singleStudent.id}}</h2>
   <h2>{{singleStudent.name}}</h2>
   <h2>{{singleStudent.age}}</h2>
+  <button (click)="emitHide()">Hide</button>
 </div>
 
