--- a/src/app/student/student-list/student-list.component.html
+++ b/src/app/student/student-list/student-list.component.html
@@ -1,3 +1,4 @@
+<app-add-student (onAddClick)="pushNewStudent($event)"></app-add-student>
 <div class="table-responsive">
   <table class="table table-primary">
     <thead>
