Delete Is Done'

--- a/src/app/student/student-list/student-list.component.html
+++ b/src/app/student/student-list/student-list.component.html
@@ -16,6 +16,7 @@
         <td>{{item.age}}</td>
         <td>
           <button (click)="showDetails(item.id)">Details</button>
+          <button (click)="deleteStudent(item.id)">Delete</button>
         </td>
       </tr>
     </tbody>
