--- a/src/app/student/update-student/update-student.component.html
+++ b/src/app/student/update-student/update-student.component.html
@@ -2,6 +2,6 @@
   <input  [(ngModel)]="updateSingleStudent.id">
   <input  [(ngModel)]="updateSingleStudent.name">
   <input  [(ngModel)]="updateSingleStudent.age">
-  <button >Save Data</button>
+  <button (click)="saveUpdate()">Save Data</button>
   <!--  -->
 </div>
