--- a/src/app/student/update-student/update-student.component.html
+++ b/src/app/student/update-student/update-student.component.html
@@ -1,7 +1,6 @@
 <div>
-  <input  [(ngModel)]="updateSingleStudent.id">
+  <input  [(ngModel)]="updateSingleStudent.id" disabled>
   <input  [(ngModel)]="updateSingleStudent.name">
   <input  [(ngModel)]="updateSingleStudent.age">
   <button (click)="saveUpdate()">Save Data</button>
-  <!--  -->
 </div>
