Clear Button is Added

--- a/src/app/student/update-student/update-student.component.html
+++ b/src/app/student/update-student/update-student.component.html
@@ -3,4 +3,5 @@
   <input  [(ngModel)]="updateSingleStudent.name">
   <input  [(ngModel)]="updateSingleStudent.age">
   <button (click)="saveUpdate()">Save Data</button>
+  <button (click)="clear()">Clear/Cancel</button>
 </div>
